[package]
name = "py_cert_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_cert_store"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
pyo3 = "0.24.1"
windows-sys = {version = "0.59.0", features = ["Win32_Security_Cryptography"] }
