[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py_cert_store"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.1"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = "Apache-2.0 license"
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
Homepage = "https://github.com/unwarymold9171/Py_Cert_Store"
Issues = "https://github.com/unwarymold9171/Py_Cert_Store/issues"

[project.optional-dependencies]
tests = ["pythonnet"]
